--- a/src/views/Dashboard/style.css
+++ b/src/views/Dashboard/style.css
@@ -1,7 +1,10 @@
 .dashboard {
+  position: absolute;
   padding: 40px 0;
-  width: 90%;
-  margin: 0 5% 0 5%;
+  width: calc(100% - 300px);
+  /* margin: 0 5% 0 5%; */
+  right: 0;
+  overflow-y: scroll;
 }
 
 
@@ -13,6 +16,7 @@
 
 .dashboard .flag{
   width: 100px;
+  box-shadow: 0px 1px 25px -7px rgba(0,0,0,0.44);
 }
 
 .dashboard  .plot-title {
