--- a/src/views/Dashboard/style.css
+++ b/src/views/Dashboard/style.css
@@ -16,7 +16,8 @@
 
 .dashboard .flag{
   width: 100px;
-  box-shadow: 0px 1px 25px -7px rgba(0,0,0,0.44);
+  /* box-shadow: 0px 1px 25px -7px rgba(0,0,0,0.44); */
+  filter: drop-shadow( 0px 0px 10px rgba(0, 0, 0, .2));
 }
 
 .dashboard .plot-title {
